Java: Hibernate: naming strategy