@@ -11,10 +11,16 @@ class IntStreamTest {
 
     @Test
     void toList() {
-        var list = IntStream.of(1, 2, 3)
-                .boxed()
-                .collect(Collectors.toList());
-        assertThat(list).contains(1, 2, 3);
+        var list1 = IntStream.of(1, 2, 3).boxed().collect(Collectors.toList());
+        assertThat(list1).contains(1, 2, 3);
+        var list2 = IntStream.of(1, 2, 3).boxed().toList();
+        assertThat(list2).contains(1, 2, 3);
+    }
+
+    @Test
+    void fromZeroToN() {
+        var list = IntStream.range(0, 3).boxed().toList();
+        assertThat(list).containsExactly(0, 1, 2);
     }
 
 }
